# comosoco-env

./: .gitignore  README.md  Taskfile.yml  VSCProject.code-workspace  pyproject.toml  requirements-minimal.txt  requirements-standard.txt  requirements.txt
comosoco/: generative-models.ipynb  installation-test.ipynb  priors-and-explaination.ipynb
